--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "start-storybook -p 9000 -s public",
-    "build": "rm -rf ./lib && npm run build:rollup",
-    "buildb": "rm -rf ./lib && npm run build:components",
+    "buildr": "rm -rf ./lib && npm run build:rollup",
+    "build": "rm -rf ./lib && npm run build:components",
     "build:rollup": "rollup -c",
     "build:types": "tsc --emitDeclarationOnly",
     "build:components": "babel ./src/components/**/* --out-dir components --extensions \".ts,.tsx\" --source-maps inline",
