--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@domparty/fe",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Our white-label front-end component library. Filled with functional components to help you kick-start your project 🚀",
-  "main": "index.js",
+  "main": "dist/library.js",
   "scripts": {
     "start": "start-storybook -p 9000 -s public",
     "build": "rm -rf ./dist && npm run build:components && npm run build:core",
-    "build:components": "microbundle ./src/components.ts -o ./dist/components.js --name Components --jsx=React.createElement",
-    "build:core": "microbundle ./src/core/Core.tsx -o ./dist/core.js --name Core --jsx=React.createElement"
+    "build:components": "microbundle ./src/library.ts -o ./components/index.js --name @domparty/fe --jsx=React.createElement",
+    "build:core": "microbundle ./src/core/Core.tsx -o ./core/index.js --name Core --jsx=React.createElement"
   },
   "repository": {
     "type": "git",
