--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@domparty/fe",
-  "version": "0.0.2",
+  "version": "0.0.22",
   "description": "Our white-label front-end component library. Filled with functional components to help you kick-start your project 🚀",
   "main": "dist/library.js",
   "scripts": {
     "start": "start-storybook -p 9000 -s public",
-    "build": "rm -rf ./dist && npm run build:components && npm run build:core",
+    "build": "rm -rf ./dist && npm run build:components && npm run build:core && npm run build:preactcore",
     "build:components": "microbundle ./src/library.ts -o ./components/index.js --name @domparty/fe --jsx=React.createElement",
-    "build:core": "microbundle ./src/core/Core.tsx -o ./core/index.js --name Core --jsx=React.createElement"
+    "build:core": "microbundle ./src/core/Core.tsx -o ./core/index.js --name Core --jsx=React.createElement",
+    "build:preactcore": "microbundle ./src/core/CorePreact.tsx -o ./core/preact/index.js --name CorePreact --jsx=h"
   },
   "repository": {
     "type": "git",
@@ -31,9 +32,12 @@
     "microbundle": "^0.12.0-next.8",
     "typescript": "^3.8.3"
   },
-  "dependencies": {
-    "goober": "^1.7.1",
+  "peerDependencies": {
+    "preact": "^10.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "dependencies": {
+    "goober": "^1.7.1"
   }
 }
