--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@storybook/react": "^5.3.17",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "babel-loader": "^8.1.0",
     "microbundle": "^0.12.0-next.8",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
