--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.17",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.1.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.2",
     "microbundle": "^0.12.0-next.8",
     "prettier": "^2.0.2",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "goober": "^1.7.1",
     "preact": "^10.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
-  },
-  "dependencies": {
-    "goober": "^1.7.1"
   }
 }
