--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.1.0",
+    "babel-plugin-prismjs": "^2.0.1",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "microbundle": "^0.12.0-next.8",
     "prettier": "^2.0.2",
+    "prismjs": "^1.20.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3"
   },
