--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-prismjs": "^2.0.1",
+    "copyclip": "0.0.2",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "microbundle": "^0.12.0-next.8",
     "prettier": "^2.0.2",
@@ -40,9 +41,11 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@charlietango/use-native-lazy-loading": "^1.7.0",
     "goober": "^1.7.1",
     "preact": "^10.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.26.1"
   }
 }
