--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@domparty/fe",
-  "version": "0.0.22",
+  "version": "0.0.3",
   "description": "Our white-label front-end component library. Filled with functional components to help you kick-start your project 🚀",
   "main": "dist/library.js",
   "scripts": {
     "start": "start-storybook -p 9000 -s public",
+    "prepublish": "npm run build",
     "build": "rm -rf ./dist && npm run build:components && npm run build:core && npm run build:preactcore",
     "build:components": "microbundle ./src/library.ts -o ./components/index.js --name @domparty/fe --jsx=React.createElement",
     "build:core": "microbundle ./src/core/Core.tsx -o ./core/index.js --name Core --jsx=React.createElement",
